# ticket

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindPython3Interp.cmake
src/: IndexModel.py  TicketController.py  TicketModel.py  ticket.py
src/commands/: add.py  add_note.py  close.py  commit.py  config.py  gc.py  log.py  open.py  show.py  start.py  status.py  stop.py
